# Warehouse-AMR

./: README.md  loc_map.yaml
install/: local_setup.sh  setup.sh
install/autonomous_exploration/share/autonomous_exploration/: package.sh
install/custom_explorer/lib/custom_explorer/: explorer
install/custom_explorer/share/custom_explorer/: package.dsv  package.ps1  package.sh
install/diffdrive_arduino/share/diffdrive_arduino/: package.sh
install/explore_lite/share/explore_lite/: local_setup.sh  package.sh
log/: latest_list
src/diffdrive_arduino/hardware/: diffbot_system.cpp
src/robot/: CMakeLists.txt
src/robot/config/: amcl_params.yaml  lidar_filter.yaml  mapper_params_online_async.yaml  my_controllers.yaml
src/robot/description/: colors.xacro  gazebo_control.xacro  robot.urdf.xacro
src/robot/launch/: bringup_launch.py  launch_robot.launch.py  navigation_launch.py  rsp.launch.py
src/robot/maps/: loc_map_serial.data  loc_test.yaml  loc_test2.yaml  loc_test_serial.data  musa_room_save.yaml  musa_room_serial.data  robotics_room.pgm  robotics_room_serial.data
src/robot/meshes/: LR_Caster.STL  RF_caster.STL  Right_wheel_drive.STL
src/robot/src/: get_current_pose.py  mqtt_goal_mechanism.py  publish_position.py
src/robot/urdf/: Chassis_diffrential_assembly_Lidar_low.csv  Chassis_diffrential_assembly_Lidar_low.urdf  Chassis_diffrential_assembly_v2.SLDPRT.urdf  robot_v2.urdf.xacro  ros2_control.xacro
src/robot/worlds/: obstacles.world
src/vizanti/: ReadMe.md
src/vizanti/vizanti_demos/: CMakeLists.txt
src/vizanti/vizanti_msgs/: CMakeLists.txt
(+122 files in other folders)
